--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="blurb">
         <h1>Hi there, I'm Timolawl!</h1>
-        <p>test<em>test</em> test. <a href="/about">Read more about my life...</a></p>
+        <p>I'm currently testing git pushes from the console. <a href="/about">Read more about my life...</a></p>
       </div><!-- /.blurb -->
     </div><!-- /.container -->
     <footer>
