Move old content to 'placeholder' folder

--- a/placeholder/index.html
+++ b/placeholder/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8"></meta>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"></meta>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
   <title>Timolawl</title>
   <!-- link to main stylesheet -->
@@ -18,7 +18,7 @@
       <li><a id="blog" href="/blog">Blog</a></li>
     </ul>
     </nav>
-  <div class="background-container">
+  <main class="background-container">
     <section class="jumbotron">
       <div class="container">
           <h1 class="jumbotext">McDonalds Coffee Enthusiast</h1>
@@ -27,7 +27,7 @@
     <div class="width-container">
         <div class="blurb">
             <h1>Hi there, I'm Timolawl!</h1>
-            <p>I'm currently testing git pushes from the terminal. Also testing changes on a localhost server before pushing to origin. Adding more text to see what happens when the page extends past the viewport height. Adding some BRs <br><br><br><br>Still need more BRs <br><br><br><br><br> <a href="/about">Read more about my life...</a></p>
+            <p>I'm currently testing git pushes from the terminal. Also testing changes on a localhost server before pushing to origin. Adding more text to see what happens when the page extends past the viewport height. Adding some BRs <br><br><br><br>Still need more BRs <br><br><br><br><br>sasdfafaewafw<blockquote cite="http://www.google.com">Stars and shit</blockquote>awefwefawefef<a href="/about">Read more about my life...</a></p>
         </div><!-- /.blurb -->
     </div><!-- /.width-container -->
     <footer class="footer">
@@ -36,6 +36,6 @@
             <li><a href="https://github.com/timolawl">github.com/timolawl</a></li>
         </ul>
     </footer>
-  </div><!-- /.background-container -->
+  </main><!-- /.background-container -->
 </body>
 </html>
