Add CSS animation to constuction page.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!-- Add your site or application content here -->
         <div class="container">
-            <svg id="TCBrand" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96">
+            <svg id="TCBrandG" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96">
                 <style>
                     .st0{fill:#ff7f66}
                     .st1{fill:#3e454c}
@@ -39,30 +39,38 @@
                         stroke-width:4;
                         stroke-linecap:round;
                         stroke-linejoin:round;
-                        stroke-miterlimit:10}
+                        stroke-miterlimit:10
+                        }
                 </style>
-                <path id="XMLID_39_" class="st0" d="M93.4 40.7c.4 2.4.6 4.8.6 7.3s-.2 4.9-.6 7.3l-6.6 2.3c-1 3.9-2.5 7.6-4.5 10.9l-5.6-11.8C77.5 54 78 51.1 78 48s-.5-6-1.3-8.8l5.6-11.8c2 3.4 3.6 7 4.5 10.9l6.6 2.4z"/>
-                <path id="XMLID_38_" class="st1" d="M85.3 21.1l-3 6.3-5.6 11.8C72.9 26.9 61.5 18 48 18c-16.6 0-30 13.4-30 30s13.4 30 30 30c13.5 0 24.9-8.9 28.7-21.2l5.6 11.8 3 6.3c-2.9 4-6.4 7.5-10.3 10.3l-6.3-3c-3.4 2-7 3.6-10.9 4.5l-2.3 6.6c-2.6.5-5 .7-7.5.7s-4.9-.2-7.3-.6l-2.3-6.6c-3.9-1-7.6-2.5-10.9-4.5l-6.3 3c-4-2.9-7.5-6.4-10.3-10.3l3-6.3c-2-3.4-3.6-7-4.5-10.9l-6.6-2.3c-.6-2.6-.8-5-.8-7.5s.2-4.9.6-7.3l6.6-2.3c1-3.9 2.5-7.6 4.5-10.9l-3-6.3c2.9-4 6.4-7.5 10.3-10.3l6.3 3c3.4-2 7-3.6 10.9-4.5l2.3-6.6c2.6-.6 5-.8 7.5-.8s4.9.2 7.3.6l2.3 6.6c3.9 1 7.6 2.5 10.9 4.5l6.3-3c4.1 2.9 7.6 6.4 10.5 10.4z"/>
-                <path id="XMLID_35_" class="st2" d="M76.7 39.2C77.5 42 78 44.9 78 48s-.5 6-1.3 8.8C72.9 69.1 61.5 78 48 78c-16.6 0-30-13.4-30-30s13.4-30 30-30c13.5 0 24.9 8.9 28.7 21.2zM65 41V31H31v10h11v30h12V41h11z"/>
-                <path id="XMLID_14_" class="st3" d="M34 41h8v3h-8z"/>
-                <path id="XMLID_15_" class="st3" d="M57 44h11V34h-3v7H54v30h-9v3h12z"/>
-                <g id="XMLID_9_">
-                    <path id="XMLID_10_" class="st4" d="M31 31h32v-2H29v10h2z"/>
-                    <path id="XMLID_11_" class="st4" d="M76.7 39.2c-1.6-5.2-4.6-9.8-8.6-13.4 3 3.2 5.2 7.1 6.6 11.4.8 2.8 1.3 5.7 1.3 8.8s-.5 6-1.3 8.8C70.9 67.1 59.5 76 46 76c-7.8 0-14.9-3-20.2-7.8 5.5 6 13.4 9.8 22.2 9.8 13.5 0 24.9-8.9 28.7-21.2.8-2.8 1.3-5.7 1.3-8.8s-.5-6-1.3-8.8z"/>
-                    <path id="XMLID_12_" class="st4" d="M40 41h2v28h-2z"/>
+                <g id="cog-color">
+                    <path id="XMLID_39_" class="st0" d="M93.4 40.7c.4 2.4.6 4.8.6 7.3s-.2 4.9-.6 7.3l-6.6 2.3c-1 3.9-2.5 7.6-4.5 10.9l-5.6-11.8C77.5 54 78 51.1 78 48s-.5-6-1.3-8.8l5.6-11.8c2 3.4 3.6 7 4.5 10.9l6.6 2.4z"/>
+                    <path id="XMLID_38_" class="st1" d="M85.3 21.1l-3 6.3-5.6 11.8C72.9 26.9 61.5 18 48 18c-16.6 0-30 13.4-30 30s13.4 30 30 30c13.5 0 24.9-8.9 28.7-21.2l5.6 11.8 3 6.3c-2.9 4-6.4 7.5-10.3 10.3l-6.3-3c-3.4 2-7 3.6-10.9 4.5l-2.3 6.6c-2.6.5-5 .7-7.5.7s-4.9-.2-7.3-.6l-2.3-6.6c-3.9-1-7.6-2.5-10.9-4.5l-6.3 3c-4-2.9-7.5-6.4-10.3-10.3l3-6.3c-2-3.4-3.6-7-4.5-10.9l-6.6-2.3c-.6-2.6-.8-5-.8-7.5s.2-4.9.6-7.3l6.6-2.3c1-3.9 2.5-7.6 4.5-10.9l-3-6.3c2.9-4 6.4-7.5 10.3-10.3l6.3 3c3.4-2 7-3.6 10.9-4.5l2.3-6.6c2.6-.6 5-.8 7.5-.8s4.9.2 7.3.6l2.3 6.6c3.9 1 7.6 2.5 10.9 4.5l6.3-3c4.1 2.9 7.6 6.4 10.5 10.4z"/>
                 </g>
-                <path id="XMLID_16_" class="st3" d="M20.7 50.7c0-16.6 13.4-30 30-30 7.5 0 14.3 2.8 19.6 7.3-5.5-6.3-13.6-10.3-22.6-10.3-16.6 0-30 13.4-30 30 0 9 4 17.2 10.3 22.7-4.5-5.3-7.3-12.2-7.3-19.7z"/>
-                <path id="XMLID_34_" class="st5" d="M65 31v10H54v30H42V41H31V31z"/>
-                <path id="XMLID_32_" class="st6" d="M82.3 68.6c2-3.4 3.6-7 4.5-10.9l6.6-2.3c.4-2.4.6-4.8.6-7.3s-.2-4.9-.6-7.3l-6.6-2.3c-1-3.9-2.5-7.6-4.5-10.9"/>
-                <path id="XMLID_31_" class="st6" d="M76.7 39.2l5.6-11.8"/>
-                <path id="XMLID_30_" class="st6" d="M76.7 56.8l5.6 11.8"/>
-                <path id="XMLID_29_" class="st6" d="M82.3 27.4l3-6.3c-2.9-4-6.4-7.5-10.3-10.3l-6.3 3c-3.4-2-7-3.6-10.9-4.5l-2.3-6.6c-2.6-.5-5-.7-7.5-.7s-4.9.2-7.3.6l-2.3 6.6c-3.9 1-7.6 2.5-10.9 4.5l-6.3-3c-4 2.9-7.5 6.4-10.3 10.3l3 6.3c-2 3.4-3.6 7-4.5 10.9l-6.6 2.3c-.6 2.6-.8 5-.8 7.5s.2 4.9.6 7.3l6.6 2.3c1 3.9 2.5 7.6 4.5 10.9l-3 6.3c2.9 4 6.4 7.5 10.3 10.3l6.3-3c3.4 2 7 3.6 10.9 4.5l2.3 6.6c2.4.4 4.8.6 7.3.6s4.9-.2 7.3-.6l2.3-6.6c3.9-1 7.6-2.5 10.9-4.5l6.3 3c4-2.9 7.5-6.4 10.3-10.3l-3-6.3"/>
-                <path id="XMLID_28_" class="st6" d="M76.7 39.2C77.5 42 78 44.9 78 48s-.5 6-1.3 8.8C72.9 69.1 61.5 78 48 78c-16.6 0-30-13.4-30-30s13.4-30 30-30c13.5 0 24.9 8.9 28.7 21.2z"/>
-                <path id="XMLID_27_" class="st6" d="M31 31v10h11v30h12V41h11V31z"/>
-         </svg>
-    </div> <!--end .container -->
-    <p>Under construction...</p>
-    <p>Check back soon!</p>
+                <g id="inside-color">
+                    <path id="XMLID_35_" class="st2" d="M76.7 39.2C77.5 42 78 44.9 78 48s-.5 6-1.3 8.8C72.9 69.1 61.5 78 48 78c-16.6 0-30-13.4-30-30s13.4-30 30-30c13.5 0 24.9 8.9 28.7 21.2zM65 41V31H31v10h11v30h12V41h11z"/>
+                    <path id="XMLID_14_" class="st3" d="M34 41h8v3h-8z"/>
+                    <path id="XMLID_15_" class="st3" d="M57 44h11V34h-3v7H54v30h-9v3h12z"/>
+                    <g id="XMLID_9_">
+                        <path id="XMLID_10_" class="st4" d="M31 31h32v-2H29v10h2z"/>
+                        <path id="XMLID_11_" class="st4" d="M76.7 39.2c-1.6-5.2-4.6-9.8-8.6-13.4 3 3.2 5.2 7.1 6.6 11.4.8 2.8 1.3 5.7 1.3 8.8s-.5 6-1.3 8.8C70.9 67.1 59.5 76 46 76c-7.8 0-14.9-3-20.2-7.8 5.5 6 13.4 9.8 22.2 9.8 13.5 0 24.9-8.9 28.7-21.2.8-2.8 1.3-5.7 1.3-8.8s-.5-6-1.3-8.8z"/>
+                        <path id="XMLID_12_" class="st4" d="M40 41h2v28h-2z"/>
+                    </g>
+                        <path id="XMLID_16_" class="st3" d="M20.7 50.7c0-16.6 13.4-30 30-30 7.5 0 14.3 2.8 19.6 7.3-5.5-6.3-13.6-10.3-22.6-10.3-16.6 0-30 13.4-30 30 0 9 4 17.2 10.3 22.7-4.5-5.3-7.3-12.2-7.3-19.7z"/>
+                        <path id="XMLID_34_" class="st5" d="M65 31v10H54v30H42V41H31V31z"/>
+                </g>
+                <g id="cog-outline">
+                    <path id="outline-small" class="st6" d="M82.3 68.6c2-3.4 3.6-7 4.5-10.9l6.6-2.3c.4-2.4.6-4.8.6-7.3s-.2-4.9-.6-7.3l-6.6-2.3c-1-3.9-2.5-7.6-4.5-10.9"/>
+                    <path id="segment-top" class="st6" d="M76.7 39.2l5.6-11.8"/>
+                    <path id="segment-bottom" class="st6" d="M76.7 56.8l5.6 11.8"/>
+                    <path id="outline-large" class="st6" d="M82.3 27.4l3-6.3c-2.9-4-6.4-7.5-10.3-10.3l-6.3 3c-3.4-2-7-3.6-10.9-4.5l-2.3-6.6c-2.6-.5-5-.7-7.5-.7s-4.9.2-7.3.6l-2.3 6.6c-3.9 1-7.6 2.5-10.9 4.5l-6.3-3c-4 2.9-7.5 6.4-10.3 10.3l3 6.3c-2 3.4-3.6 7-4.5 10.9l-6.6 2.3c-.6 2.6-.8 5-.8 7.5s.2 4.9.6 7.3l6.6 2.3c1 3.9 2.5 7.6 4.5 10.9l-3 6.3c2.9 4 6.4 7.5 10.3 10.3l6.3-3c3.4 2 7 3.6 10.9 4.5l2.3 6.6c2.4.4 4.8.6 7.3.6s4.9-.2 7.3-.6l2.3-6.6c3.9-1 7.6-2.5 10.9-4.5l6.3 3c4-2.9 7.5-6.4 10.3-10.3l-3-6.3"/>
+                </g>
+                <path id="circle-outline" class="st6" d="M76.7 39.2C77.5 42 78 44.9 78 48s-.5 6-1.3 8.8C72.9 69.1 61.5 78 48 78c-16.6 0-30-13.4-30-30s13.4-30 30-30c13.5 0 24.9 8.9 28.7 21.2z"/>
+                <path id="T-outline" class="st6" d="M31 31v10h11v30h12V41h11V31z"/>
+            </svg>
+
+        </div> <!--end .container -->
+        <p>Under construction...</p>
+        <p>Check back soon!</p>
 
 
         <!--
@@ -96,6 +104,7 @@
         -->
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
