--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!-- Add your site or application content here -->
         <div class="container">
-            <svg id="TCBrandG" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96">
+            <svg id="TimolawlLogo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96">
                 <style>
                     .st0{fill:#ff7f66}
                     .st1{fill:#3e454c}
@@ -44,7 +44,7 @@
                         stroke-miterlimit:10
                         }
                 </style>
-                <!-- order of elements dictates here dictates z-index or foreground priority, with latter entries having higher z-index/priority -->
+                <!-- order of elements dictates z-index or foreground priority, with latter entries having higher z-index/priority -->
                 <g id="cog-color">
                     <!-- cog-small-color -->
                     <path id="XMLID_39_" class="st0" d="M93.4 40.7c.4 2.4.6 4.8.6 7.3s-.2 4.9-.6 7.3l-6.6 2.3c-1 3.9-2.5 7.6-4.5 10.9l-5.6-11.8C77.5 54 78 51.1 78 48s-.5-6-1.3-8.8l5.6-11.8c2 3.4 3.6 7 4.5 10.9l6.6 2.4z"/>
@@ -68,8 +68,8 @@
                 </g> <!-- end #inside-color -->
                 <g id="cog-outline">
                     <path id="outline-small" class="st6" d="M82.3 68.6c2-3.4 3.6-7 4.5-10.9l6.6-2.3c.4-2.4.6-4.8.6-7.3s-.2-4.9-.6-7.3l-6.6-2.3c-1-3.9-2.5-7.6-4.5-10.9"/>
-                    <path id="segment-top" class="st6" d="M76.7 39.2l5.6-11.8"/>
-                    <path id="segment-bottom" class="st6" d="M76.7 56.8l5.6 11.8"/>
+                    <path id="outline-segment-top" class="st6" d="M76.7 39.2l5.6-11.8"/>
+                    <path id="outline-segment-bottom" class="st6" d="M76.7 56.8l5.6 11.8"/>
                     <path id="outline-large" class="st6" d="M82.3 27.4l3-6.3c-2.9-4-6.4-7.5-10.3-10.3l-6.3 3c-3.4-2-7-3.6-10.9-4.5l-2.3-6.6c-2.6-.5-5-.7-7.5-.7s-4.9.2-7.3.6l-2.3 6.6c-3.9 1-7.6 2.5-10.9 4.5l-6.3-3c-4 2.9-7.5 6.4-10.3 10.3l3 6.3c-2 3.4-3.6 7-4.5 10.9l-6.6 2.3c-.6 2.6-.8 5-.8 7.5s.2 4.9.6 7.3l6.6 2.3c1 3.9 2.5 7.6 4.5 10.9l-3 6.3c2.9 4 6.4 7.5 10.3 10.3l6.3-3c3.4 2 7 3.6 10.9 4.5l2.3 6.6c2.4.4 4.8.6 7.3.6s4.9-.2 7.3-.6l2.3-6.6c3.9-1 7.6-2.5 10.9-4.5l6.3 3c4-2.9 7.5-6.4 10.3-10.3l-3-6.3"/>
                 </g> <!-- end #cog-outline -->
                 <path id="circle-outline" class="st6" d="M76.7 39.2C77.5 42 78 44.9 78 48s-.5 6-1.3 8.8C72.9 69.1 61.5 78 48 78c-16.6 0-30-13.4-30-30s13.4-30 30-30c13.5 0 24.9 8.9 28.7 21.2z"/>
