--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <link rel="icon" type="image/x-icon" href="/TCBrand.ico">
 
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.css">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple&text=Timolawl">
+      <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.css">  -->
+      <!--  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple&text=Timolawl"> -->
+      <!--   <link rel="stylesheet" href="css/normalize.css"> -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans">
-        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
@@ -41,15 +41,13 @@
                         stroke-width:4;
                         stroke-linecap:round;
                         stroke-linejoin:round;
-                        stroke-miterlimit:10
+                        stroke-miterlimit:10;
                         }
                 </style>
                 <!-- order of elements dictates z-index or foreground priority, with latter entries having higher z-index/priority -->
                 <g id="cog-color">
-                    <!-- cog-small-color -->
-                    <path id="XMLID_39_" class="st0" d="M93.4 40.7c.4 2.4.6 4.8.6 7.3s-.2 4.9-.6 7.3l-6.6 2.3c-1 3.9-2.5 7.6-4.5 10.9l-5.6-11.8C77.5 54 78 51.1 78 48s-.5-6-1.3-8.8l5.6-11.8c2 3.4 3.6 7 4.5 10.9l6.6 2.4z"/>
-                    <!-- cog-large-color -->
-                    <path id="XMLID_38_" class="st1" d="M85.3 21.1l-3 6.3-5.6 11.8C72.9 26.9 61.5 18 48 18c-16.6 0-30 13.4-30 30s13.4 30 30 30c13.5 0 24.9-8.9 28.7-21.2l5.6 11.8 3 6.3c-2.9 4-6.4 7.5-10.3 10.3l-6.3-3c-3.4 2-7 3.6-10.9 4.5l-2.3 6.6c-2.6.5-5 .7-7.5.7s-4.9-.2-7.3-.6l-2.3-6.6c-3.9-1-7.6-2.5-10.9-4.5l-6.3 3c-4-2.9-7.5-6.4-10.3-10.3l3-6.3c-2-3.4-3.6-7-4.5-10.9l-6.6-2.3c-.6-2.6-.8-5-.8-7.5s.2-4.9.6-7.3l6.6-2.3c1-3.9 2.5-7.6 4.5-10.9l-3-6.3c2.9-4 6.4-7.5 10.3-10.3l6.3 3c3.4-2 7-3.6 10.9-4.5l2.3-6.6c2.6-.6 5-.8 7.5-.8s4.9.2 7.3.6l2.3 6.6c3.9 1 7.6 2.5 10.9 4.5l6.3-3c4.1 2.9 7.6 6.4 10.5 10.4z"/>
+                    <path id="small-section-color" class="st0" d="M93.4 40.7c.4 2.4.6 4.8.6 7.3s-.2 4.9-.6 7.3l-6.6 2.3c-1 3.9-2.5 7.6-4.5 10.9l-5.6-11.8C77.5 54 78 51.1 78 48s-.5-6-1.3-8.8l5.6-11.8c2 3.4 3.6 7 4.5 10.9l6.6 2.4z"/>
+                    <path id="large-section-color" class="st1" d="M85.3 21.1l-3 6.3-5.6 11.8C72.9 26.9 61.5 18 48 18c-16.6 0-30 13.4-30 30s13.4 30 30 30c13.5 0 24.9-8.9 28.7-21.2l5.6 11.8 3 6.3c-2.9 4-6.4 7.5-10.3 10.3l-6.3-3c-3.4 2-7 3.6-10.9 4.5l-2.3 6.6c-2.6.5-5 .7-7.5.7s-4.9-.2-7.3-.6l-2.3-6.6c-3.9-1-7.6-2.5-10.9-4.5l-6.3 3c-4-2.9-7.5-6.4-10.3-10.3l3-6.3c-2-3.4-3.6-7-4.5-10.9l-6.6-2.3c-.6-2.6-.8-5-.8-7.5s.2-4.9.6-7.3l6.6-2.3c1-3.9 2.5-7.6 4.5-10.9l-3-6.3c2.9-4 6.4-7.5 10.3-10.3l6.3 3c3.4-2 7-3.6 10.9-4.5l2.3-6.6c2.6-.6 5-.8 7.5-.8s4.9.2 7.3.6l2.3 6.6c3.9 1 7.6 2.5 10.9 4.5l6.3-3c4.1 2.9 7.6 6.4 10.5 10.4z"/>
                 </g>
                 <g id="inside-color">
                     <path id="circle-background-color" class="st2" d="M76.7 39.2C77.5 42 78 44.9 78 48s-.5 6-1.3 8.8C72.9 69.1 61.5 78 48 78c-16.6 0-30-13.4-30-30s13.4-30 30-30c13.5 0 24.9 8.9 28.7 21.2zM65 41V31H31v10h11v30h12V41h11z"/>
@@ -76,9 +74,9 @@
                 <path id="T-outline" class="st6" d="M31 31v10h11v30h12V41h11V31z"/>
             </svg>
 
+            <p>Under construction...</p>
+            <p>Check back soon!</p>
         </div> <!--end .container -->
-        <p>Under construction...</p>
-        <p>Check back soon!</p>
 
 
         <!--
@@ -116,14 +114,15 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-72590422-1', 'auto');
+            ga('send', 'pageview');
+
         </script>
     </body>
 </html>
