1st site iteration - jekyll/scss/css methodologies

--- a/index.html
+++ b/index.html
@@ -1,175 +1,5 @@
-<!DOCTYPE html>
-<html class="no-js" lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Timolawl</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-        <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
-        <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-        <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-        <link rel="manifest" href="/manifest.json">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3e454c">
-        <meta name="msapplication-TileColor" content="#2d89ef">
-        <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-        <meta name="theme-color" content="#ffffff"><link rel="apple-touch-icon" href="apple-touch-icon.png">
-
-      <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.css">  -->
-      <!--  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple&text=Timolawl"> -->
-      <!--   <link rel="stylesheet" href="css/normalize.css"> -->
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-        <div class="container">
-            <svg id="TimolawlLogo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96">
-                <style>
-                    .st0{fill:#ff7f66}
-                    .st1{fill:#3e454c}
-                    .st2{fill:#fff6e5}
-                    .st3{fill:#807b73}
-                    .st4{fill:#ffffff}
-                    .st5{fill:#2185c5}
-                    .st6{fill:none;
-                        stroke: #000000;
-                    /*    stroke:#231f20; */
-
-                        stroke-width:4;
-                        stroke-linecap:round;
-                        stroke-linejoin:round;
-                        stroke-miterlimit:10;
-                        }
-                </style>
-                <!-- order of elements dictates z-index or foreground priority, with latter entries having higher z-index/priority -->
-                <!-- should group based on handling, not structure -->
-                <!-- structure should be:
-                    cog:
-                        small cog
-                            -small cog outline
-                            -small cog color
-                        large cog
-                            -large cog outline
-                            -large cog color
-                    inside:
-                        circle:
-                            -circle outline
-                            -background color
-                            -background shadow
-                        T:
-                            -T outline
-                            -T color
-                            -T left shadow
-                            -T right shadow
-
-                -->
-                <g id="cog">
-                    <g id="cog-color">
-                        <path id="small-section-color" class="st0" d="M93.4 40.7c.4 2.4.6 4.8.6 7.3s-.2 4.9-.6 7.3l-6.6 2.3c-1 3.9-2.5 7.6-4.5 10.9l-5.6-11.8C77.5 54 78 51.1 78 48s-.5-6-1.3-8.8l5.6-11.8c2 3.4 3.6 7 4.5 10.9l6.6 2.4z"/>
-                        <path id="large-section-color" class="st1" d="M85.3 21.1l-3 6.3-5.6 11.8C72.9 26.9 61.5 18 48 18c-16.6 0-30 13.4-30 30s13.4 30 30 30c13.5 0 24.9-8.9 28.7-21.2l5.6 11.8 3 6.3c-2.9 4-6.4 7.5-10.3 10.3l-6.3-3c-3.4 2-7 3.6-10.9 4.5l-2.3 6.6c-2.6.5-5 .7-7.5.7s-4.9-.2-7.3-.6l-2.3-6.6c-3.9-1-7.6-2.5-10.9-4.5l-6.3 3c-4-2.9-7.5-6.4-10.3-10.3l3-6.3c-2-3.4-3.6-7-4.5-10.9l-6.6-2.3c-.6-2.6-.8-5-.8-7.5s.2-4.9.6-7.3l6.6-2.3c1-3.9 2.5-7.6 4.5-10.9l-3-6.3c2.9-4 6.4-7.5 10.3-10.3l6.3 3c3.4-2 7-3.6 10.9-4.5l2.3-6.6c2.6-.6 5-.8 7.5-.8s4.9.2 7.3.6l2.3 6.6c3.9 1 7.6 2.5 10.9 4.5l6.3-3c4.1 2.9 7.6 6.4 10.5 10.4z"/>
-                    </g>
-
-                    <g id="cog-outline">
-                        <path id="outline-small" class="st6" d="M82.3 68.6c2-3.4 3.6-7 4.5-10.9l6.6-2.3c.4-2.4.6-4.8.6-7.3s-.2-4.9-.6-7.3l-6.6-2.3c-1-3.9-2.5-7.6-4.5-10.9"/>
-                        <path id="outline-segment-top" class="st6" d="M76.7 39.2l5.6-11.8"/>
-                        <path id="outline-segment-bottom" class="st6" d="M76.7 56.8l5.6 11.8"/>
-                        <path id="outline-large" class="st6" d="M82.3 27.4l3-6.3c-2.9-4-6.4-7.5-10.3-10.3l-6.3 3c-3.4-2-7-3.6-10.9-4.5l-2.3-6.6c-2.6-.5-5-.7-7.5-.7s-4.9.2-7.3.6l-2.3 6.6c-3.9 1-7.6 2.5-10.9 4.5l-6.3-3c-4 2.9-7.5 6.4-10.3 10.3l3 6.3c-2 3.4-3.6 7-4.5 10.9l-6.6 2.3c-.6 2.6-.8 5-.8 7.5s.2 4.9.6 7.3l6.6 2.3c1 3.9 2.5 7.6 4.5 10.9l-3 6.3c2.9 4 6.4 7.5 10.3 10.3l6.3-3c3.4 2 7 3.6 10.9 4.5l2.3 6.6c2.4.4 4.8.6 7.3.6s4.9-.2 7.3-.6l2.3-6.6c3.9-1 7.6-2.5 10.9-4.5l6.3 3c4-2.9 7.5-6.4 10.3-10.3l-3-6.3"/>
-                    </g> <!-- end #cog-outline -->
-                </g> <!-- end #cog -->
-                <g id="inside-of-cog">
-                    <g id="circle">
-                        <path id="circle-background-color" class="st2" d="M76.7 39.2C77.5 42 78 44.9 78 48s-.5 6-1.3 8.8C72.9 69.1 61.5 78 48 78c-16.6 0-30-13.4-30-30s13.4-30 30-30c13.5 0 24.9 8.9 28.7 21.2zM65 41V31H31v10h11v30h12V41h11z"/>
-
-                        <g id="circle-inside-highlight">
-                        <!-- can probably just delete this -->
-                            <path id="XMLID_10_" class="st4" d="M31 31h32v-2H29v10h2z"/>
-                            <path id="XMLID_11_" class="st4" d="M76.7 39.2c-1.6-5.2-4.6-9.8-8.6-13.4 3 3.2 5.2 7.1 6.6 11.4.8 2.8 1.3 5.7 1.3 8.8s-.5 6-1.3 8.8C70.9 67.1 59.5 76 46 76c-7.8 0-14.9-3-20.2-7.8 5.5 6 13.4 9.8 22.2 9.8 13.5 0 24.9-8.9 28.7-21.2.8-2.8 1.3-5.7 1.3-8.8s-.5-6-1.3-8.8z"/>
-                            <path id="XMLID_12_" class="st4" d="M40 41h2v28h-2z"/>
-                        </g> <!-- end #inside-highlight -->
-
-                        <path id="circle-inside-shadow" class="st3" d="M20.7 50.7c0-16.6 13.4-30 30-30 7.5 0 14.3 2.8 19.6 7.3-5.5-6.3-13.6-10.3-22.6-10.3-16.6 0-30 13.4-30 30 0 9 4 17.2 10.3 22.7-4.5-5.3-7.3-12.2-7.3-19.7z"/>
-                        <path id="circle-outline" class="st6" d="M76.7 39.2C77.5 42 78 44.9 78 48s-.5 6-1.3 8.8C72.9 69.1 61.5 78 48 78c-16.6 0-30-13.4-30-30s13.4-30 30-30c13.5 0 24.9 8.9 28.7 21.2z"/>
-                    </g> <!-- end #circle -->
-
-                    <g id="T">
-                        <path id="T-color" class="st5" d="M65 31v10H54v30H42V41H31V31z"/>
-                        <path id="T-left-shadow" class="st3" d="M42 42.5c0-.8-.9-1.5-2-1.5h-4c-1.1 0-2 .7-2 1.5s.9 1.5 2 1.5h4c1.1 0 2-.7 2-1.5z"/>
-                        <path id="T-right-shadow" class="st3" d="M57 46c0-1.1.9-2 2-2h7c1.1 0 2-.9 2-2v-6c0-1.1-.7-2-1.5-2s-1.5.9-1.5 2v3c0 1.1-.9 2-2 2h-7c-1.1 0-2 .9-2 2v26c0 1.1-.9 2-2 2h-5c-1.1 0-2 .7-2 1.5s.9 1.5 2 1.5h8c1.1 0 2-.9 
-                        2-2V46z"/>
-                        <path id="T-outline" class="st6" d="M31 31v10h11v30h12V41h11V31z"/>
-                   </g> <!-- end #T -->
-                </g> <!-- end #inside-of-cog -->
-            </svg>
-
-            <p>Under construction...</p>
-            <p>Check back soon!</p>
-        </div> <!--end .container -->
-
-
-        <!--
-        <header>
-            <nav class="main-nav">
-                <ul>
-                    <li><a id="home" class="active font-effect-shadow-multiple" href="/">Timolawl</a></li>
-                    <li><a id="about" href="/about">About</a></li>
-                    <li><a id="cv" href="/cv">CV</a></li>
-                    <li><a id="blog" href="/blog">Blog</a></li>
-               </ul>
-            </nav>
-        </header>
-        <main>
-            <section class="construction">
-                <h1>Under Construction..</h1>
-                <span class="fa fa-cog fa-5x fa-spin"</span>
-            </section>
-            <section class="test">
-                <span class="col-9"><p>Test 9</p></span>
-                <span class="col-3"><p>Test 3</p></span>
-            </section>
-
-            <section class="animate">
-
-            </section>
-
-        </main>
-        <footer>
-        </footer>
-        -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.0.0-beta1.min.js"><\/script>')</script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
-            <!--
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
-            -->
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-72590422-1', 'auto');
-            ga('send', 'pageview');
-
-        </script>
-    </body>
-</html>
+---
+layout: page
+title: Home
+---
+First iteration. As always, a <span class="home__cog">work in progress.</span>
