--- a/contact/index.html
+++ b/contact/index.html
@@ -3,4 +3,4 @@ layout: page
 title: Contact
 in-nav: true
 ---
-Contact me here.
+Currently, the best way to reach me is via email: <a href="mailto:timolawl@gmail.com">timolawl@gmail.com</a>
