--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Home
 ---
-First iteration. As always, it is a <span class="home__cog">
+First iteration. As always, the site is a <span class="home__cog">
     <svg class="cog" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96">
         <style>
             .ct0{fill:#FFF}
