--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ First iteration. As always, the site is a <span class="home__cog">
 <span class="cog__clear">work in progress.</span></span>
 
 <div class="commit-message-wrapper">
-    <span class="discord-image-wrapper"><img class="discord-image" src="{{ '/uploads/alienTimCircleCropped.png' | prepend: site.baseurl }}" alt="Tim's Discord logo" height="45" width="45"></span>
+    <span class="discord-image-wrapper"><img class="discord-image" src="static/images/alienTimCircleCropped.png" alt="Tim's Discord logo" height="45" width="45"></span>
     <div class="commit-text">
         <p class="discord-name">timolawl </p>
         <p class="time-since-commit"></p>
@@ -25,19 +25,19 @@ First iteration. As always, the site is a <span class="home__cog">
         <div id="lastCommitMessage"></div>
     </div>
 </div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
-<script src="{{ '/js/git-message.js' | prepend: site.baseurl }}"></script>
+<!--
 <script>
-    $(function() {
-        $(".time-since-commit").loadTimeSince();
-    });
+    window.onload = function() {
+        $(function() {
+            $(".time-since-commit").loadTimeSince();
+        });
 
-    $(function () {
-        $("#lastCommitMessage").loadLastCommitMessage();
-    });
+        $(function () {
+            $("#lastCommitMessage").loadLastCommitMessage();
+        });
+    };
 </script>
-
+-->
 <!--
 <script>
     $(function() {
