--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 layout: page
 title: Home
 ---
-First iteration. As always, the site is a <span class="home__cog">
-    <svg class="cog" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96">
-        <style>
-            .ct0{fill:#FFF}
-            .ct0,.ct1{stroke:#8d8c8e;stroke-width:4;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10}
-            .ct1{fill:none}
-        </style>
-        <g id="XMLID_3_">
-            <path id="XMLID_4_" class="ct0" d="M93.4 40.7l-6.6-2.3c-1-3.9-2.5-7.6-4.5-10.9l3-6.3c-2.9-4-6.4-7.5-10.4-10.4l-6.3 3c-3.4-2-7-3.6-10.9-4.5l-2.3-6.6C52.9 2.2 50.5 2 48 2s-4.9.2-7.3.6l-2.3 6.6c-3.9 1-7.6 2.5-10.9 4.5l-6.3-3c-4 2.9-7.5 6.4-10.4 10.4l3 6.3c-2 3.4-3.6 7-4.5 10.9l-6.6 2.3C2.2 43.1 2 45.5 2 48s.2 4.9.6 7.3l6.6 2.3c1 3.9 2.5 7.6 4.5 10.9l-3 6.3c2.9 4 6.4 7.5 10.4 10.4l6.3-3c3.4 2 7 3.6 10.9 4.5l2.3 6.6c2.4.4 4.8.6 7.3.6s4.9-.2 7.3-.6l2.3-6.6c3.9-1 7.6-2.5 10.9-4.5l6.3 3c4-2.9 7.5-6.4 10.4-10.4l-3-6.3c2-3.4 3.6-7 4.5-10.9l6.6-2.3c.4-2.4.6-4.8.6-7.3s0-4.9-.4-7.3z"/>
-            <circle id="XMLID_7_" class="ct1" cx="48" cy="48" r="30"/>
-        </g>
-    </svg>
-<span class="cog__clear">work in progress.</span></span>
+<p>
+Version 1.1 - Responsive web design implemented.</p>
+
+<p>As always, the site is a <div> <div class="fill"></div><span class="home__cog">
+        <svg class="cog" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96">
+            <style>
+                .ct0{fill:#FFF}
+                .ct0,.ct1{stroke:#8d8c8e;stroke-width:4;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10}
+                .ct1{fill:none}
+            </style>
+            <g id="XMLID_3_">
+                <path id="XMLID_4_" class="ct0" d="M93.4 40.7l-6.6-2.3c-1-3.9-2.5-7.6-4.5-10.9l3-6.3c-2.9-4-6.4-7.5-10.4-10.4l-6.3 3c-3.4-2-7-3.6-10.9-4.5l-2.3-6.6C52.9 2.2 50.5 2 48 2s-4.9.2-7.3.6l-2.3 6.6c-3.9 1-7.6 2.5-10.9 4.5l-6.3-3c-4 2.9-7.5 6.4-10.4 10.4l3 6.3c-2 3.4-3.6 7-4.5 10.9l-6.6 2.3C2.2 43.1 2 45.5 2 48s.2 4.9.6 7.3l6.6 2.3c1 3.9 2.5 7.6 4.5 10.9l-3 6.3c2.9 4 6.4 7.5 10.4 10.4l6.3-3c3.4 2 7 3.6 10.9 4.5l2.3 6.6c2.4.4 4.8.6 7.3.6s4.9-.2 7.3-.6l2.3-6.6c3.9-1 7.6-2.5 10.9-4.5l6.3 3c4-2.9 7.5-6.4 10.4-10.4l-3-6.3c2-3.4 3.6-7 4.5-10.9l6.6-2.3c.4-2.4.6-4.8.6-7.3s0-4.9-.4-7.3z"/>
+                <circle id="XMLID_7_" class="ct1" cx="48" cy="48" r="30"/>
+            </g>
+        </svg>
+        <span class="cog__clear">work in progress.</span></span></div>
+</p>
 
 <div class="commit-message-wrapper">
     <span class="discord-image-wrapper"><img class="discord-image" src="static/images/alienTimCircleCropped.png" alt="Tim's Discord logo" height="45" width="45"></span>
