Minor layout fixes and code cleanup.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Version 1.1 - Responsive web design implemented.</p>
                 <circle id="XMLID_7_" class="ct1" cx="48" cy="48" r="30"/>
             </g>
         </svg>
-        <span class="cog__clear">work in progress.</span></span></div>
+        <span class="WIP">work in progress.</span></span></div>
 </p>
 
 <div class="commit-message-wrapper">
