--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Version 1.1 - Responsive web design implemented.</p>
 </p>
 
 <div class="commit-message-wrapper">
-    <span class="discord-image-wrapper"><img class="discord-image" src="static/images/alienTimCircleCropped.png" alt="Tim's Discord logo" height="45" width="45"></span>
+    <span class="discord-image-wrapper"><img class="discord-image" src="static/images/DiscordImage.png" alt="Discord profile image" height="45" width="45"></span>
     <div class="commit-text">
         <p class="discord-name">timolawl </p>
         <p class="time-since-commit"></p>
@@ -29,23 +29,4 @@ Version 1.1 - Responsive web design implemented.</p>
         <div id="lastCommitMessage"></div>
     </div>
 </div>
-<!--
-<script>
-    window.onload = function() {
-        $(function() {
-            $(".time-since-commit").loadTimeSince();
-        });
 
-        $(function () {
-            $("#lastCommitMessage").loadLastCommitMessage();
-        });
-    };
-</script>
--->
-<!--
-<script>
-    $(function() {
-        $("#lastCommitMessage").checkRateLimit();
-    });
-</script>
--->
