Add footer, discord attribution for commit module.

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,4 +3,10 @@ layout: page
 title: Contact
 in-nav: true
 ---
-Currently, the best way to reach me is via email: <a href="mailto:timolawl@gmail.com">timolawl@gmail.com</a>
+<div>
+    <p>Currently, the best way to reach me is via email: <a href="mailto:timolawl@gmail.com">timolawl@gmail.com</a></p>
+</div>
+
+<div>
+    
+</div>
