--- a/index.html
+++ b/index.html
@@ -29,4 +29,5 @@ Version 1.1 - Responsive web design implemented.</p>
         <div id="lastCommitMessage"></div>
     </div>
 </div>
+<div><p class="discord-message">Commit message module in <a href="https://discordapp.com" title="Discord">Discord</a> style. </p></div>
 
