Change js library sources to CDN. Move js snippets

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Version 1.1 - Responsive web design implemented.</p>
     <span class="discord-image-wrapper"><img class="discord-image" src="static/images/DiscordImage.png" alt="Discord profile image" height="45" width="45"></span>
     <div class="commit-text">
         <p class="discord-name">timolawl </p>
-        <p class="time-since-commit"></p>
+        <p id="time-since-commit" class="time-since-commit"></p>
         <p class="commit-message-title">Latest commit message: </p>
         <div id="lastCommitMessage"></div>
     </div>
