Rename variable for consistency.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Version 1.1 - Responsive web design implemented.</p>
         <p class="discord-name">timolawl </p>
         <p id="time-since-commit" class="time-since-commit"></p>
         <p class="commit-message-title">Latest commit message: </p>
-        <div id="lastCommitMessage"></div>
+        <div id="last-commit-message" class="last-commit-message"></div>
     </div>
 </div>
 <div><p class="discord-message">Commit message module in <a href="https://discordapp.com" title="Discord">Discord</a> style. </p></div>
