--- a/contact/index.html
+++ b/contact/index.html
@@ -3,10 +3,29 @@ layout: page
 title: Contact
 in-nav: true
 ---
+<!--
 <div>
     <p>Currently, the best way to reach me is via email: <a href="mailto:timolawl@gmail.com">timolawl@gmail.com</a></p>
 </div>
+-->
 
-<div>
-    
-</div>
+<form class="contact__form" action="//formspree.io/timolawl@gmail.com"" method="POST">
+    <div class="contact-outerwrap">
+        <div class="contact-wrapper">
+            <!--            <label for="contact__form--name">Name:</label> -->
+            <input type="text" id="contact__form--name" class="contact__form--name" placeholder="Name" required />
+        </div>
+        <div class="contact-wrapper">
+            <!-- <label for="contact__form--email">Email:</label> -->
+            <input type="email" id="contact__form--email" class="contact__form--email" placeholder="Email Address" required />
+        </div>
+        <div class="contact-wrapper">
+            <!-- <label for="contact__form--msg">Message:</label> -->
+            <textarea id="contact__form--msg" class="contact__form--msg" placeholder="Message" required></textarea>
+        </div>
+        <div class="contact-wrapper">
+            <button class="contact__form--button" type="submit">Submit</button>
+        </div>
+    </div>
+</form>
+
