Display email explicitly in the event ext. fails.

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,12 +3,6 @@ layout: page
 title: Contact
 in-nav: true
 ---
-<!--
-<div>
-    <p>Currently, the best way to reach me is via email: <a href="mailto:timolawl@gmail.com">timolawl@gmail.com</a></p>
-</div>
--->
-
 <form class="contact__form" action="//formspree.io/timolawl@gmail.com"" method="POST">
     <div class="contact-outerwrap">
         <div class="contact-wrapper">
@@ -29,3 +23,6 @@ in-nav: true
     </div>
 </form>
 
+<div class="contact-email">
+    <h4>If submitting forms is not your thing, you can reach me directly at <a href="mailto:timolawl@gmail.com">timolawl@gmail.com</a>.</h4>
+</div>
