--- a/contact/index.html
+++ b/contact/index.html
@@ -6,19 +6,20 @@ in-nav: true
 <form class="contact__form" action="//formspree.io/timolawl@gmail.com"" method="POST">
     <div class="contact-outerwrap">
         <div class="contact-wrapper">
-            <!--            <label for="contact__form--name">Name:</label> -->
             <input type="text" id="contact__form--name" class="contact__form--name" placeholder="Name" required />
         </div>
         <div class="contact-wrapper">
-            <!-- <label for="contact__form--email">Email:</label> -->
             <input type="email" id="contact__form--email" class="contact__form--email" placeholder="Email Address" required />
         </div>
+
+        <input type="hidden" name="_next" value="//timolawl.github.io/contact/thanks.html" />
+        <input type="text" name="_gotcha" style="display:none" />
+
         <div class="contact-wrapper">
-            <!-- <label for="contact__form--msg">Message:</label> -->
             <textarea id="contact__form--msg" class="contact__form--msg" placeholder="Message" required></textarea>
         </div>
         <div class="contact-wrapper">
-            <button class="contact__form--button" type="submit">Submit</button>
+            <button class="contact__form--button" type="submit" >Submit</button>
         </div>
     </div>
 </form>
