Remove 404 page since server cannot be configured.

--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,7 @@ in-nav: true
             <input type="email" id="contact__form--email" class="contact__form--email" placeholder="Email Address" required />
         </div>
 
-        <input type="hidden" name="_next" value="//timolawl.github.io/contact/thanks.html" />
+        <input type="hidden" name="_next" value="//timolawl.github.io/contact/thanks/index.html" />
         <input type="text" name="_gotcha" style="display:none" />
 
         <div class="contact-wrapper">
