Adjust font consistency across pages.

--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,7 @@ in-nav: true
             <input type="text" id="contact__form--name" class="contact__form--name" placeholder="Name" required />
         </div>
         <div class="contact-wrapper">
-            <input type="email" id="contact__form--email" class="contact__form--email" placeholder="Email Address" required />
+            <input type="email" name="_replyto" id="contact__form--email" class="contact__form--email" placeholder="Email Address" required />
         </div>
 
         <input type="hidden" name="_next" value="//timolawl.github.io/contact/thanks/index.html" />
