--- a/contact/thanks/index.html
+++ b/contact/thanks/index.html
@@ -4,4 +4,4 @@ title: Thanks
 in-nav: false
 ---
 
-<h3> Thank you! Your message has been submitted. I will get back to you as soon as I can!</h3>
+<p> Thank you! Your message has been submitted. I will reply to you promptly.</p>
