Resize contact msg box and edit thank you page.

--- a/contact/index.html
+++ b/contact/index.html
@@ -16,7 +16,7 @@ in-nav: true
         <input type="text" name="_gotcha" style="display:none" />
 
         <div class="contact-wrapper">
-            <textarea name="message" id="contact__form--msg" class="contact__form--msg" placeholder="Message" required></textarea>
+            <textarea name="message" id="contact__form--msg" class="contact__form--msg" placeholder="Message" rows="8" required></textarea>
         </div>
         <div class="contact-wrapper">
             <button class="contact__form--button" type="submit" >Submit</button>
