--- a/contact/thanks/index.html
+++ b/contact/thanks/index.html
@@ -4,4 +4,4 @@ title: Thanks
 in-nav: false
 ---
 
-<p> Thank you! Your message has been submitted. I will reply to you promptly.</p>
+<p> Thank you! Your message has been submitted.</p>
