Add homepage logo hero animation.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Home
 ---
 <p>
-Version 1.1 - Responsive web design implemented.</p>
+Version 1.2 - Add hero intro and various modules to website.</p>
 
 <p>As always, the site is a <div> <div class="fill"></div><span class="home__cog">
         <svg class="cog" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 96">
