Add fcc/codepen content to portfolio section.

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Contact
 in-nav: true
 ---
-<form class="contact__form" action="//formspree.io/timolawl@gmail.com"" method="POST">
+<form class="contact__form" action="//formspree.io/timolawl@gmail.com" method="POST">
     <div class="contact-outerwrap">
         <div class="contact-wrapper">
             <input type="text" name="name" id="contact__form--name" class="contact__form--name" placeholder="Name" required />
