--- a/note/index.html
+++ b/note/index.html
@@ -3,8 +3,8 @@ layout: page
 title: Note
 in-nav: true
 ---
-<div class="note">
-    <div class="note__title"></div>
-    <div class="note__date-created"></div>
-    <div id="note__content" class="note__content" contentEditable="true"></div>
+<div class="notepad">
+    <div class="notepad__title"></div>
+    <div class="notepad__date-created"></div>
+    <div id="notepad__content" class="notepad__content" contentEditable="true"></div>
 </div>
