--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@ title: Portfolio
 in-nav: true
 ---
 
-<svg style='display: none'>
+<svg xmlns='http://www.w3.org/2000/svg' version='1.1' style='display: none'>
     <filter id='filter--monochrome' color-interpolation-filters='sRGB' x='0' y='0' height='100%' width='100%'>
         <feColorMatrix type='matrix'
             values='0.65 0 0 0 0
