--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,6 +15,9 @@ in-nav: true
 </svg>
 
 <div class='grid'>
+    <div class='grid-4-of-12 portfolio-0'>
+        <a href='//codepen.io/timchiang/full/mPedPG'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/story.png" | prepend: site.baseurl }}'></a>
+    </div>
     <div class='grid-4-of-12 portfolio-1'>
         <a href='//codepen.io/timchiang/full/reBZPx'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/tictactoe.png" | prepend: site.baseurl }}'></a>
     </div>
