Add markdown viewer project to portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,6 +16,9 @@ in-nav: true
 
 <div class='grid'>
     <div class='grid-4-of-12 portfolio-0'>
+        <a href='//codepen.io/timchiang/full/ZWQVyy'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/markdown.png" | prepend: site.baseurl }}'></a>
+    </div>
+    <div class='grid-4-of-12 portfolio-0'>
         <a href='//codepen.io/timchiang/full/mPedPG'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/story.png" | prepend: site.baseurl }}'></a>
     </div>
     <div class='grid-4-of-12 portfolio-1'>
