Add FCC camper leaderboard project to portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,10 +16,13 @@ in-nav: true
 
 <div class='grid'>
     <div class='grid-4-of-12 portfolio-0'>
-        <a href='//codepen.io/timchiang/full/ZWQVyy'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/markdown.png" | prepend: site.baseurl }}'></a>
+        <a href='//codepen.io/timchiang/full/grrOGK'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/leaderboard.png" | prepend: site.baseurl }}'></a>
     </div>
     <div class='grid-4-of-12 portfolio-0'>
         <a href='//codepen.io/timchiang/full/mPedPG'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/story.png" | prepend: site.baseurl }}'></a>
+    </div>
+    <div class='grid-4-of-12 portfolio-0'>
+        <a href='//codepen.io/timchiang/full/ZWQVyy'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/markdown.png" | prepend: site.baseurl }}'></a>
     </div>
     <div class='grid-4-of-12 portfolio-1'>
         <a href='//codepen.io/timchiang/full/reBZPx'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/tictactoe.png" | prepend: site.baseurl }}'></a>
