--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,40 +15,40 @@ in-nav: true
 </svg>
 
 <div class='grid'>
-    <div class='grid-4-of-12 portfolio-0'>
-        <a href='//codepen.io/timchiang/full/grrOGK'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/leaderboard.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/grrOGK'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/leaderboard.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>FreeCodeCamp Leaderboard</span><br><span class='caption--implementation'>React, jQuery, JS, and SCSS</span></div></a>
     </div>
-    <div class='grid-4-of-12 portfolio-0'>
-        <a href='//codepen.io/timchiang/full/mPedPG'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/story.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/mPedPG'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/story.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Alternate Portfolio Website</span><br><span class='caption--implementation'>HTML5+Canvas, SCSS, and JS</span></div></a>
     </div>
-    <div class='grid-4-of-12 portfolio-0'>
-        <a href='//codepen.io/timchiang/full/ZWQVyy'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/markdown.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/ZWQVyy'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/markdown.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Markdown Previewer</span><br><span class='caption--implementation'>React, marked library, JS, and SCSS</span></div></a>
     </div>
-    <div class='grid-4-of-12 portfolio-1'>
-        <a href='//codepen.io/timchiang/full/reBZPx'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/tictactoe.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/reBZPx'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/tictactoe.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Tic-Tac-Toe</span><br><span class='caption--implementation'>HTML5, SVG, SCSS, and JS</span></div></a>
     </div>
-    <div class='grid-4-of-12 portfolio-2'>
-        <a href='//codepen.io/timchiang/full/RabYzJ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/simon.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/RabYzJ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/simon.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Simon Game</span><br><span class='caption--implementation'>Haml, SCSS, and JS</span></div></a>
     </div>
-    <div class='grid-4-of-12 portfolio-3'>
-        <a href='//codepen.io/timchiang/full/reBNgE'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/pomodoro.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/reBNgE'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/pomodoro.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Pomodoro Timer</span><br><span class='caption--implementation'>HTML5, SCSS, and JS</span></div></a>
     </div>
-    <div class='grid-4-of-12 portfolio-4'>
-        <a href='//codepen.io/timchiang/full/VeoxdQ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/wiki.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/VeoxdQ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/wiki.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Wikipedia Viewer</span><br><span class='caption--implementation'>HTML5, SCSS, and JS</span></div></a>
     </div>
-    <div class='grid-4-of-12 portfolio-5'>
-        <a href='//codepen.io/timchiang/full/wMVPwj'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/calculator.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/wMVPwJ'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/calculator.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Calculator</span><br><span class='caption--implementation'>HTML5, SCSS, and JS</span></div></a>
     </div>
-    <div class='grid-4-of-12 portfolio-6'>
-        <a href='//codepen.io/timchiang/full/vLwwBq'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/quote.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/vLwwBq'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/quote.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Bruce Lee Quote Generator</span><br><span class='caption--implementation'>HTML5, SVG, SCSS, and JS</span></div></a>
     </div>
-    <div class='grid-4-of-12 portfolio-7'>
-        <a href='//codepen.io/timchiang/full/NxZZwM'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/weather.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/NxZZwM'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/weather.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Local Weather</span><br><span class='caption--implementation'>HTML5, SCSS, and JS</span></div></a>
     </div>
-    <div class='grid-4-of-12 portfolio-8'>
-        <a href='//codepen.io/timchiang/full/gPEzqw'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/twitch.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/gPEzqw'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/twitch.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Twitch Streamers</span><br><span class='caption--implementation'>HTML5, SCSS, and JS</span></div></a>
     </div>
-    <div class='grid-4-of-12 portfolio-9'>
-        <a href='//codepen.io/timchiang/full/jWdLjp'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/tribute.png" | prepend: site.baseurl }}'></a>
+    <div class='grid-4-of-12 portfolio__project'>
+        <a class='portfolio__project-link' href='//codepen.io/timchiang/full/jWdLjp'><img class='portfolio__project-image' src='{{ "/static/images/portfolio/tribute.png" | prepend: site.baseurl }}'><div class='portfolio__project-caption'><span class='caption--summary'>Paul Walker Tribute Page</span><br><span class='caption--implementation'>HTML5 and SCSS</span></div></a>
     </div>
 </div>
